switch from diodonfrost container to my own

--- a/molecule/custom-datadir/molecule.yml
+++ b/molecule/custom-datadir/molecule.yml
@@ -13,7 +13,7 @@ lint: |
 
 platforms:
   - name: instance
-    image: "diodonfrost/ansible-${DISTRIBUTION:-debian:10}"
+    image: "bodsch/ansible-${DISTRIBUTION:-debian:11}"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
     privileged: true
@@ -28,8 +28,9 @@ provisioner:
     # - -vvv
   config_options:
     defaults:
-      deprecation_warnings: true
-      callbacks_enabled: true
+      deprecation_warnings: True
+      stdout_callback: yaml
+      callbacks_enabled: profile_tasks
 
 scenario:
   test_sequence:
