--- a/molecule/with-replication/molecule.yml
+++ b/molecule/with-replication/molecule.yml
@@ -13,7 +13,7 @@ lint: |
 
 platforms:
   - name: primary
-    image: "diodonfrost/ansible-${DISTRIBUTION:-debian:10}"
+    image: "bodsch/ansible-${DISTRIBUTION:-debian:11}"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
     privileged: true
@@ -33,7 +33,7 @@ platforms:
         ipv4_address: "10.16.0.10"
 
   - name: replica_1
-    image: "diodonfrost/ansible-${DISTRIBUTION:-debian:10}"
+    image: "bodsch/ansible-${DISTRIBUTION:-debian:11}"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
     privileged: true
@@ -48,7 +48,7 @@ platforms:
         ipv4_address: "10.16.0.21"
 
   - name: replica_2
-    image: "diodonfrost/ansible-${DISTRIBUTION:-debian:10}"
+    image: "bodsch/ansible-${DISTRIBUTION:-debian:11}"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
     privileged: true
@@ -71,6 +71,7 @@ provisioner:
     defaults:
       deprecation_warnings: True
       stdout_callback: yaml
+      callbacks_enabled: profile_tasks
 
 scenario:
   test_sequence:
