--- a/.github/workflows/custom-datadir.yml
+++ b/.github/workflows/custom-datadir.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   push:
     branches:
-      - master
+      - main
       - development
   schedule:
     - cron: "0 3 * * 0"
