--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   push:
     branches:
-      - master
+      - main
       - development
   schedule:
     - cron: "0 2 * * 0"
@@ -184,7 +184,7 @@ jobs:
           DISTRIBUTION: ${{ matrix.image }}
 
   publish:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     needs:
       - arch
       - deb
@@ -195,4 +195,4 @@ jobs:
         uses: robertdebock/galaxy-action@1.2.0
         with:
           galaxy_api_key: ${{ secrets.galaxy_api_key }}
-          git_branch: master
+          git_branch: main
