add repository definition for redhat based

--- a/tasks/detect_mariadb_version.yml
+++ b/tasks/detect_mariadb_version.yml
@@ -4,6 +4,7 @@
   package_version:
     state: available
     package_name: "{{ mariadb_server }}"
+    repository: "{{ 'MariaDB' if ansible_os_family | lower == 'redhat' and mariadb_use_external_repo else '' }}"
   register: package_version
 
 - name: define mariadb version
