--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -3,11 +3,15 @@
 - name: snapd
   src: https://github.com/bodsch/ansible-snapd.git
   scm: git
-  version: 1.1.1
+  version: 1.1.2
 
 - name: apparmor
   src: https://github.com/bodsch/ansible-apparmor.git
   scm: git
   version: 1.0.1
+
+- name: syslog-ng
+  src: bodsch.syslog_ng
+  version: 1.3.1
 
 ...
