--- a/tasks/prepare.yaml
+++ b/tasks/prepare.yaml
@@ -8,16 +8,16 @@
         - "vars"
       files:
         # eg. debian-10 / ubuntu-20.04 / centos-8 / oraclelinux-8
-        - "{{ ansible_distribution | lower }}-{{ ansible_distribution_major_version }}.yaml"
+        - "{{ ansible_distribution | lower }}-{{ ansible_distribution_major_version }}.yml"
         # eg. archlinux-systemd / archlinux-openrc
-        - "{{ ansible_distribution | lower }}-{{ ansible_service_mgr | lower }}.yaml"
+        - "{{ ansible_distribution | lower }}-{{ ansible_service_mgr | lower }}.yml"
         # eg. artixlinux
         - "{{ ansible_distribution | lower | replace(' ', '') }}.yml"
         # eg. debian / ubuntu / centos / oraclelinux
-        - "{{ ansible_distribution | lower }}.yaml"
+        - "{{ ansible_distribution | lower }}.yml"
         # eg. redhat / debian / archlinux
-        - "{{ ansible_os_family | lower }}.yaml"
-        - default.yaml
+        - "{{ ansible_os_family | lower }}.yml"
+        - default.yml
       skip: true
 
 - block:
