--- a/molecule/custom-datadir/requirements.yml
+++ b/molecule/custom-datadir/requirements.yml
@@ -1,13 +1,11 @@
 ---
 
 - name: snapd
-  src: https://github.com/bodsch/ansible-snapd.git
-  scm: git
-  version: 1.1.1
+  src: bodsch.snapd
+  version: 1.1.2
 
 - name: apparmor
-  src: https://github.com/bodsch/ansible-apparmor.git
-  scm: git
+  src: bodsch.apparmor
   version: 1.0.1
 
 ...
