--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -1,17 +1,15 @@
 ---
 
 - name: snapd
-  src: https://github.com/bodsch/ansible-snapd.git
-  scm: git
+  src: bodsch.snapd
   version: 1.1.2
 
 - name: apparmor
-  src: https://github.com/bodsch/ansible-apparmor.git
-  scm: git
+  src: bodsch.apparmor
   version: 1.0.1
 
 - name: syslog-ng
   src: bodsch.syslog_ng
-  version: 1.3.1
+  version: 1.4.0
 
 ...
