--- a/.github/workflows/primary-replica.yml
+++ b/.github/workflows/primary-replica.yml
@@ -16,25 +16,6 @@ defaults:
 
 jobs:
 
-  lint:
-    name: linting
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: lint
-        uses: docker://ghcr.io/github/super-linter:slim-v4
-        env:
-          DEFAULT_BRANCH: master
-          GITHUB_TOKEN: ${{ secrets.GH_REGISTRY_TOKEN }}
-          VALIDATE_ALL_CODEBASE: true
-          VALIDATE_ANSIBLE: true
-          # VALIDATE_MARKDOWN: true
-          VALIDATE_YAML: true
-
   arch:
     name: "${{ matrix.image }} / python: ${{ matrix.python-version }}, ansible: ${{ matrix.ansible-version }}"
     needs:
@@ -45,11 +26,8 @@ jobs:
       matrix:
         image:
           - archlinux:latest
-        python-version:
-          - '3.9'
         ansible-version:
-          - '4.1.0'
-          - '5.1.0'
+          - '6.1'
 
     steps:
       - name: check out the codebase.
@@ -77,7 +55,7 @@ jobs:
 
       - name: test with tox
         run: |
-          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') \
+          tox -e ansible_$(printf "${{ matrix.ansible-version }}") \
             -- molecule test --scenario-name with-replication
         env:
           PY_COLORS: '1'
@@ -93,13 +71,9 @@ jobs:
       fail-fast: false
       matrix:
         image:
-          - debian:10
           - debian:11
-        python-version:
-          - '3.9'
         ansible-version:
-          - '4.1.0'
-          - '5.1.0'
+          - '6.1'
 
     steps:
       - name: check out the codebase.
@@ -127,7 +101,7 @@ jobs:
 
       - name: test with tox
         run: |
-          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') \
+          tox -e ansible_$(printf "${{ matrix.ansible-version }}") \
             -- molecule test --scenario-name with-replication
         env:
           PY_COLORS: '1'
@@ -144,12 +118,7 @@ jobs:
       matrix:
         image:
           - oraclelinux:8
-          - rockylinux:8
-          - almalinux:8
-        python-version:
-          - '3.9'
         ansible-version:
-          - '4.1.0'
           - '5.1.0'
 
     steps:
@@ -178,7 +147,7 @@ jobs:
 
       - name: test with tox
         run: |
-          tox -e py$(printf "${{ matrix.python-version }}" | tr -d '.')-ansible$(printf "${{ matrix.ansible-version }}" | tr -d '.') \
+          tox -e ansible_$(printf "${{ matrix.ansible-version }}") \
             -- molecule test --scenario-name with-replication
         env:
           PY_COLORS: '1'
