--- a/molecule/custom-datadir/molecule.yml
+++ b/molecule/custom-datadir/molecule.yml
@@ -28,7 +28,7 @@ provisioner:
     # - -vvv
   config_options:
     defaults:
-      deprecation_warnings: True
+      deprecation_warnings: true
       stdout_callback: yaml
       callbacks_enabled: profile_tasks
 
