--- a/tasks/replication.yml
+++ b/tasks/replication.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: define network adresses for replicas
-  delegate_to: "127.0.0.1"
+  delegate_to: localhost
   run_once: true
   set_fact:
     list_of_ips: "{{ mariadb_instances }}"
