--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,10 +7,12 @@ galaxy_info:
   author: Bodo Schulz
   description: MariaDB Server for debian (Ubuntu), RedHat (CentOS) and Arch Linux.
   company: ""
+
   license: "Apache"
-  min_ansible_version: 2.9
+  min_ansible_version: "2.10"
+
   platforms:
-    - name: Archlinux
+    - name: ArchLinux
     - name: Debian
       versions:
         # 10
@@ -23,7 +25,7 @@ galaxy_info:
         - focal
     - name: EL
       versions:
-        - 8
+        - "8"
 
   galaxy_tags:
     - sql
