--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,27 +1,37 @@
 ---
 
-- include_tasks: prepare.yaml
+- name: prepare
+  include_tasks: prepare.yaml
 
-- include_tasks: detect_mariadb_version.yml
+- name: detect mariadb version
+  include_tasks: detect_mariadb_version.yml
 
-- include_tasks: installation.yml
+- name: install
+  include_tasks: installation.yml
 
-- include_tasks: configure.yml
+- name: configure
+  include_tasks: configure.yml
 
-- include_tasks: secure-installation.yml
+- name: secure installation
+  include_tasks: secure-installation.yml
 
-- include_tasks: monitoring.yml
+- name: monitoring
+  include_tasks: monitoring.yml
 
-- include_tasks: databases.yml
+- name: databases
+  include_tasks: databases.yml
 
-- include_tasks: users.yml
+- name: users
+  include_tasks: users.yml
 
-- include_tasks: replication.yml
+- name: replication
+  include_tasks: replication.yml
   when:
     - (mariadb_replication.enabled is defined and mariadb_replication.enabled)
     - (mariadb_replication.role is defined and mariadb_replication.role | length > 0)
     - mariadb_replication.role in ['primary', 'replica']
 
-- include_tasks: service.yml
+- name: service
+  include_tasks: service.yml
 
 ...
